# python_bioinformagicks

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
.woodpecker/: container_build_test_workflow.yml  container_build_workflow.yml  pypi_package_workflow.yaml  test_workflow.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  python_bioinformagicks.plotting.rst  python_bioinformagicks.rst  python_bioinformagicks.tools.rst  python_bioinformagicks.utilities.rst  usage.rst
src/python_bioinformagicks/: __init__.py
src/python_bioinformagicks/plotting/: __init__.py  _plot_gprofiler_results.py  _plot_grouped_proportions.py  _plot_split_embedding.py  _split_plot_embedding.py
src/python_bioinformagicks/tools/: __init__.py  _calc_jasmine_score.py  _call_scSNP.py  _do_gprofiler_analysis.py  _in_ignore_list.py  _scale_by_group.py  _subset_by_coordinates.py  _subset_by_geosketching.py  _tf_idf_markers.py
src/python_bioinformagicks/utilities/: __init__.py  _get_grouped_categories.py  _get_proportions.py  _make_combined_categorical_column.py  _truncate_colormap.py
tests/: __init__.py  test_plotting.py  test_python_bioinformagicks.py  test_tools.py  test_utils.py
tests/data/: subsample.bam.bai
