[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python_bioinformagicks"
version = "0.1.0"
description = "A collection of tools for various bioinformatics tasks."
readme = "README.rst"
authors = [
  {name = "Sylvia N. Michki", email = "sylvia.michki@gmail.com"}
]
maintainers = [
  {name = "Sylvia N. Michki", email = "sylvia.michki@gmail.com"}
]
classifiers = [
  "Programming Language :: Python",
  "Development Status :: 4 - Beta",
]
license = {text = "GNU General Public License v3"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/sylviamic/python_bioinformagicks/issues"
changelog = "https://github.com/sylviamic/python_bioinformagicks/blob/master/changelog.md"
homepage = "https://github.com/sylviamic/python_bioinformagicks"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]


# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

